--- a/css/styles.css
+++ b/css/styles.css
@@ -3,22 +3,35 @@ body {
   font-family: "Metrophobic", sans-serif;
 }
 
-.page {
-    width: 80%;
-    background-color: white;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 10px;
-}
-
 h1 {
-    padding-left: 27%;
+    padding-left: 24%;
     font-family: "IBM Plex Serif", serif;
 }
 
 h2 {
     text-align: center;
     padding-left: 5%;
+    padding-bottom: 10px;
+}
+
+pre {
+    font-family: "Metrophobic", sans-serif;
+    padding-left: 25px;
+    padding-top: 100px;
+    font-size: 13px;
+    color: rgb(52, 52, 52);
+}
+
+a {
+    color: blue;
+}
+
+.page {
+    width: 80%;
+    background-color: white;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 10px;
 }
 
 .left-p {
@@ -28,17 +41,6 @@ h2 {
 
 .right-p {
     padding-left: 25%;
-}
-
-pre {
-    font-family: "Metrophobic", sans-serif;
-    padding-left: 25px;
-    font-size: 13px;
-    color: rgb(52, 52, 52);
-}
-
-a {
-    color: blue;
 }
 
 .asia {
@@ -67,8 +69,8 @@ a {
 }
 
 #center-text {
-    padding-left: 32%;
-    padding-right: 28%;
+    padding-left: 33%;
+    padding-right: 30%;
 }
 
 #map-dropdown {
